opam-version: "2.0"
name: "dataStructures"
synopsis: "Library providing Map and Set datastructures using modular implicits"
version: "dev"
maintainer: "yallop@gmail.com"
authors: ["Leo White" "Jeremy Yallop"]
homepage: "https://github.com/modular-implicits/DataStructures"
dev-repo: "git+https://github.com/modular-implicits/DataStructures.git"
bug-reports: "http://github.com/modular-implicits/DataStructures/issues"
license: "MIT"
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
   "dune" {build}
   "ocaml-variants"
     { = "4.02.1+modular-implicits" | = "4.02.1+modular-implicits-ber" }
     "imp"
]